# lpc54114-lite

./: .gitignore  README.md  SW-Content-Register.txt
app/: FreeRTOSConfig.h  compile.h  ffconf.h  main_core0.c  main_core1.c  start_core1.c  start_core1.h
app/test/: test.h  test_aac_decode.c  test_adc.c  test_audio_play.c  test_cli.c  test_fatfs.c  test_mp3_decode.c  test_pct2075.c  test_wm8904.c
bsp/: board.c  board.h  bsp_adc.c  bsp_adc.h  bsp_dmic.c  bsp_dmic.h  bsp_flash.c  bsp_flash.h  bsp_key.c  bsp_key.h  bsp_led.c  bsp_led.h  bsp_pct2075.c  bsp_pct2075.h  bsp_sdspi.c  bsp_sdspi.h  bsp_systick.c  bsp_systick.h  bsp_uart.c  bsp_uart.h  bsp_wm8904.c  bsp_wm8904.h  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
components/codec/port/wm8904/: fsl_codec_adapter.c
components/codec/wm8904/: fsl_wm8904.c
components/gpio/: gint_adapter.c  lpc_gpio_adapter.c
components/mx25r_flash/: mx25r_flash.c  mx25r_flash.h
components/sdmmc/sdmmc_2.1.1/src/: fsl_sdspi.c
devices/LPC54114/: system_LPC54114_cm4.c
devices/LPC54114/gcc/: LPC54114J256_cm4_flash.ld  startup_LPC54114_cm0plus.S  startup_LPC54114_cm4.S
devices/LPC54114/project_template/: board.c  board.h  peripherals.c  pin_mux.c  pin_mux.h
devices/LPC54114/template/: RTE_Device.h
middleware/aaclib/: aacdec.c
middleware/aaclib/aacpub/: aacdec.h
middleware/aaclib/real/: assembly.h  buffers.c  filefmt.c  sbr.c  sbrhfgen.c  sbrqmf.c
middleware/aaclib/real/armgcc/: sbrcov.S  sbrqmfak.S  sbrqmfsk.S
middleware/aaclib/real/iar/: sbrcov.s  sbrqmfak.s  sbrqmfsk.s
middleware/fatfs/source/: diskio.h  ffsystem.c
middleware/fatfs/source/fsl_sdspi_disk/: fsl_sdspi_disk.c  fsl_sdspi_disk.h
middleware/issdk/boardkit/evk-mimxrt1050/: pin_mux.h
middleware/mp3lib/: mp3dec.c  mp3play.c
middleware/mp3lib/mp3pub/: mp3common.h  mp3dec.h  statname.h
middleware/mp3lib/real/: assembly.h  bitstream.c  buffers.c  coder.h  dct32.c  dequant.c  dqchan.c  huffman.c  imdct.c  polyphase.c  scalfact.c  subband.c
middleware/mp3lib/real/armgcc/: asmmisc.S  asmpoly_thumb2.S
middleware/mp3lib/real/iar/: asmmisc.s  asmpoly_thumb2.s
middleware/multicore/erpc/docs/: IDL-Reference.md
middleware/multicore/erpc/erpcgen/VisualStudio_v14/: erpcgen.sln  erpcgen.vcxproj  erpcgen.vcxproj.filters
middleware/multicore/mcmgr/doc/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  group__mcmgr.html  index.html  mcmgr_8h_source.html  modules.html
middleware/multicore/mcmgr/src/: mcmgr_internal_core_api_lpc54114.c
middleware/multicore/rpmsg_lite/lib/include/platform/lpc5411x/: rpmsg_platform.h
middleware/multicore/rpmsg_lite/lib/rpmsg_lite/porting/platform/lpc5411x/: rpmsg_platform.c
project/armgcc/cm0plus/: CMakeLists.txt  build_all.sh  gdb_core1.script
project/armgcc/cm4/: CMakeLists.txt  LPC54114J256_cm4_flash.ld  build_debug.sh  gdb.script  gdb_core0.script  gdbsever_core0.sh  gdbsever_core1.sh  run.sh  run_core1.sh
project/armgcc/cm4_ram/: CMakeLists.txt  LPC54114J256_cm4_ram.ld  build_all.sh  build_release.sh  gdb.script  gdb_core0.script  run_core0.sh
rtos/amazon-freertos/: CHANGELOG.md
rtos/amazon-freertos/cli/: UARTCommandConsole.h
rtos/amazon-freertos/cli/port/: serial.c  serial.h
rtos/amazon-freertos/lib/FreeRTOS/portable/MemMang/: heap_4.c
rtos/amazon-freertos/lib/cli/: FreeRTOS_CLI.c  FreeRTOS_CLI.h  UARTCommandConsole.c  UARTCommandConsole.h
rtos/amazon-freertos/lib/cli/port/: serial.c  serial.h
